--- a/settings.gradle
+++ b/settings.gradle
@@ -2,11 +2,13 @@ pluginManagement {
     repositories {
         google()
         mavenCentral()
-        gradlePluginPortal()
+    }
+    plugins {
+        id 'com.android.application' version '8.2.1' apply false
+        id 'com.android.library' version '8.2.1' apply false
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
