--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,9 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-feature
-        android:name="android.hardware.bluetooth_le"
-        android:required="true" />
-
     <application
         android:icon="@android:mipmap/sym_def_app_icon"
-        android:label="ClovaDeskApp"
+        android:label="ClovaSetup"
         android:theme="@android:style/Theme.DeviceDefault">
         <activity
             android:name=".MainActivity"
@@ -26,10 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ClovaDetails"
-            android:label=""
-            android:exported="true"/>
         <activity
             android:name=".ClovaWiFiList"
             android:exported="true"/>
