--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:name="android.hardware.bluetooth"
+        android:required="true" />
+
     <application
         android:icon="@android:mipmap/sym_def_app_icon"
         android:label="ClovaSetup"
         android:theme="@android:style/Theme.DeviceDefault">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -22,9 +28,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ClovaWiFiList"
-            android:exported="true"/>
+            android:exported="true" />
+
     </application>
 
 </manifest>
