--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,12 @@ on:
       - '*.gradle'
       - '*.properties'
   workflow_dispatch:
-    inputs:
-      release:
-        description: 'Release'
-        type: boolean
-        required: true
-        default: false
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    permissions: 
+    permissions:
       contents: write
     steps:
 
@@ -33,13 +27,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches/
-            ~/.gradle/wrapper/
-          key: ${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
 
       - name: Set environments
         run: |
@@ -49,57 +38,13 @@ jobs:
             echo "repo=$(echo ${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/})"
           } >> $GITHUB_ENV
 
-      - name: Check tag exists
-        uses: mukunku/tag-exists-action@v1.5.0
-        if: github.event.inputs.release == 'true'
-        id: check-tag
-        with: 
-          tag: "${{ env.version }}"
-
-      - name: Release check
-        if: github.event.inputs.release == 'true'
-        run: |
-          if [[ "${{ secrets.STORE_FILE }}" == "" ]]; then
-            echo -e "\nERROR!\nリリースするには､ 署名鍵を設定する必要があります｡\n"
-            echo "STORE_FILE: JKS形式の署名鍵をBase64でエンコードした文字列"
-            echo "STORE_PASSWORD: キーストアのパスワード"
-            echo "KEY_ALIAS: 署名のエイリアス"
-            echo "KEY_PASSWORD: 署名のパスワード"
-            echo ""
-            exit 1
-          fi
-          if [[ "${{ steps.check-tag.outputs.exists }}" == "true" ]]; then
-            echo -e "\nERROR!\n既に同じタグが存在します｡\n"
-            echo "build.gradle の versionName を変更してください"
-            echo ""
-            exit 1
-          fi
-
       - name: Build with Gradle
         run: |
-          if [[ "${{ inputs.release }}" == "true" ]]; then
-            echo "${{ secrets.STORE_FILE }}" | base64 -d > app/release.jks
-            export STORE_PASSWORD="${{ secrets.STORE_PASSWORD }}"
-            export KEY_ALIAS="${{ secrets.KEY_ALIAS }}"
-            export KEY_PASSWORD="${{ secrets.KEY_PASSWORD }}"
-            ./gradlew aR --no-daemon
-            cp -f app/build/outputs/apk/release/app-release.apk ${{ env.repo }}-${{ env.version }}.apk
-          else
-            ./gradlew asD --no-daemon
-          fi
+          ./gradlew assembleDebug --no-daemon
+          cp -f app/build/outputs/apk/debug/app-debug.apk ${{ env.repo }}-${{ env.version }}@${{ env.commit }}.apk
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
-        if: github.event.inputs.release != 'true'
         with:
           name: ${{ env.repo }}(${{ env.version }}@${{ env.commit }})
-          path: app/build/outputs/apk/debug/app-debug.apk
-
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: github.event.inputs.release == 'true'
-        with:
-          tag_name: ${{ env.version }}
-          draft: false
-          prerelease: false
-          files: ${{ env.repo }}-${{ env.version }}.apk
+          path: ${{ env.repo }}-${{ env.version }}@${{ env.commit }}.apk
